Fix button width and align 絵文字 (emoji) on the user panel

--- a/res/css/views/right_panel/_VerificationPanel.scss
+++ b/res/css/views/right_panel/_VerificationPanel.scss
@@ -23,7 +23,22 @@ limitations under the License.
     }
 }
 
-.mx_UserInfo {
+.mx_UserInfo.mx_BaseCard {
+    .mx_UserInfo_container {
+        &:not(.mx_UserInfo_separator) {
+            .mx_VerificationPanel_verifyByEmojiButton,
+            .mx_UserInfo_wideButton {
+                width: fit-content;
+            }
+
+            .mx_VerificationShowSas {
+                margin-inline-start: auto;
+                margin-inline-end: auto;
+                align-items: center;
+            }
+        }
+    }
+
     .mx_EncryptionPanel_cancel {
         @mixin customisedCancelButton;
         width: 14px;
